--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "dev": "npm run build && node dist/index.js",
     "dev:watch": "nodemon --exec \"npm run build && node dist/index.js\" --watch src",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test-groq.js",
     "pm2:start": "pm2 start ecosystem.config.js",
     "pm2:stop": "pm2 stop ai-workflow-server",
     "pm2:restart": "pm2 restart ai-workflow-server",
@@ -21,14 +21,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
     "@types/node": "^24.3.0",
     "@types/ws": "^8.18.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10",
-    "openai": "^5.15.0",
     "pm2": "^5.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
