--- a/server/env.example
+++ b/server/env.example
@@ -3,9 +3,9 @@
 # Groq Cloud API Key (REQUIRED)
 # Get your free API key from: https://console.groq.com/
 # The system automatically selects the best model for each task:
-# - Gemma 7B for simple/fast tasks
-# - Mixtral 8x7B for balanced performance  
-# - LLaMA-2 70B for complex tasks
+# - LLaMA 3.1 8B Instant for fast/simple tasks
+# - LLaMA 3.1 8B for balanced performance  
+# - LLaMA 3.3 70B for complex tasks
 GROQ_API_KEY=gsk-your-groq-cloud-api-key-here
 
 # Server Configuration
