--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,6 @@
     "dev": "npm run build && node dist/index.js",
     "dev:watch": "nodemon --exec \"npm run build && node dist/index.js\" --watch src",
     "build": "tsc",
-    "test": "node test-groq.js",
     "pm2:start": "pm2 start ecosystem.config.js",
     "pm2:stop": "pm2 stop ai-workflow-server",
     "pm2:restart": "pm2 restart ai-workflow-server",
@@ -35,6 +34,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.23"
+    "@types/express": "^4.17.23",
+    "@types/node-fetch": "^2.6.13"
   }
 }
