--- a/server/render.yaml
+++ b/server/render.yaml
@@ -10,5 +10,9 @@ services:
         value: production
       - key: PORT
         value: 10000
+      # IMPORTANT: GROQ_API_KEY must be set manually in Render dashboard
+      # Go to your service > Environment tab > Add GROQ_API_KEY
+      - key: GROQ_API_KEY
+        sync: false
     healthCheckPath: /health
     autoDeploy: true
