--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "pm2": "^5.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
+    "vercel": "^35.0.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
