--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@reactflow/core": "^11.11.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.8.2",
+    "reactflow": "^11.11.4",
     "tailwind-merge": "^2.0.0",
     "zustand": "^5.0.8"
   },
