--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@reactflow/core": "^11.11.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
